--- a/public/assets/css/finder.css
+++ b/public/assets/css/finder.css
@@ -142,7 +142,7 @@
         /* Bump up size of carousel content */
     }
     .landing-page .navbar-wrapper {
-        margin-top: 20px;
+        /*margin-top: 20px;*/
     }
     .landing-page .navbar-wrapper .container {
         padding-right: 15px;
@@ -182,7 +182,7 @@
         margin-top: 6px;
     }
     .landing-page .navbar-default {
-        background-color: #fff;
+        background-color: transparent;
         border-color: #fff;
         padding: 15px 0;
     }
