--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -5247,11 +5247,28 @@ del {
 }
 .product-imitation {
     text-align: center;
-    padding: 40px 0;
+    padding: 20px 0;
     background-color: #f8f8f9;
     color: #bebec3;
     font-weight: 600;
+    max-height:230px;
+    overflow:hidden;
 }
+
+.navbar2.fixed-top{
+    position: fixed;
+    top: 110px;
+    z-index: 9999999;
+    width: 100%;
+    left: 0;
+}
+.navbar2{
+    position:inherit;
+    z-index:0;
+    top:auto;
+    left:auto;
+}
+
 .cart-product-imitation {
     text-align: center;
     position:relative;
