--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -5251,7 +5251,7 @@ del {
     background-color: #f8f8f9;
     color: #bebec3;
     font-weight: 600;
-    max-height:230px;
+    height:230px;
     overflow:hidden;
 }
 
