--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -8470,3 +8470,12 @@ body{
     margin-right: 0;
     margin-left: 0;
 }
+
+footer{
+    width:100%;
+    padding:10px;
+    margin-top:35px;
+    text-align:center;
+    color:#fff;
+    background-color: #0187CE;
+}
