--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -8462,6 +8462,7 @@ body.md-skin {
     font-weight: bold;
     border-bottom: 2px solid #333333;
     margin-bottom: 25px;
+    padding-top: 18px;
     color: #666666;
     line-height: 1em;
 }
