--- a/public/assets/css/menu.css
+++ b/public/assets/css/menu.css
@@ -129,3 +129,21 @@ body {
     max-height:300px;
     overflow-y: auto;
 }
+
+.verMas{
+    position:absolute;
+    bottom:0;
+    left:0;
+    right:0;
+    width:80%;
+    margin:auto;
+    opacity: .5;
+    padding-top:2px;
+    border-top: dashed 1px rgba(0, 0, 0, 0.48);
+    display:none;
+}
+
+
+.pb20{
+    padding-bottom:20px;
+}
