--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -3722,7 +3722,7 @@ code {
     margin-bottom: 25px;
     margin-top: 0;
     padding: 0;
-    /*max-height: 470px;*/
+    height: 600px;
 }
 .ibox.collapsed .ibox-content {
     display: none;
@@ -8693,3 +8693,20 @@ footer{
     color: #d9534f !important;
 }
 
+
+.pt-0{
+    padding-top:0 !important;
+}
+
+
+.pb-0{
+    padding-bottom:0 !important;
+}
+
+.pb-5{
+    padding-bottom:5px !important;
+}
+
+.pt-5{
+    padding-top:5px !important;
+}
